--- a/index.html
+++ b/index.html
@@ -11,60 +11,94 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
-        body { 
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        html, body { 
             margin: 0; 
             padding: 0; 
             font-family: 'Manrope', sans-serif;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
         }
         #map { 
             position: absolute; 
             top: 0; 
+            left: 0;
+            right: 0;
             bottom: 0; 
             width: 100%; 
+            height: 100%;
         }
         .info-box {
             position: absolute;
-            bottom: 30px;
+            bottom: 20px;
             left: 50%;
             transform: translateX(-50%);
             background: #CCCAEA;
-            padding: 25px 40px;
-            border-radius: 15px;
+            padding: 20px 30px;
+            border-radius: 12px;
             color: #3E4746;
             text-align: center;
-            max-width: 90%;
+            max-width: 85%;
             z-index: 1;
         }
         .info-box h2 {
-            margin: 0 0 10px 0;
-            font-size: 26px;
+            margin: 0 0 8px 0;
+            font-size: 20px;
             font-weight: 600;
+            line-height: 1.3;
+        }
+        .info-box p {
+            margin: 0;
+            font-size: 15px;
+            line-height: 1.4;
         }
         .distance {
             color: #54577C;
             font-style: italic;
-            font-size: 26px;
+            font-size: 20px;
             font-weight: 600;
         }
         .marker-olympia {
-            width: 40px;
-            height: 40px;
+            width: 35px;
+            height: 35px;
             border-radius: 50%;
             background: white;
-            border: 4px solid #333;
+            border: 3px solid #333;
             cursor: pointer;
         }
         .marker-user {
-            width: 50px;
-            height: 50px;
+            width: 40px;
+            height: 40px;
             background: #ffd700;
             border-radius: 50%;
-            border: 4px solid #333;
+            border: 3px solid #333;
             cursor: pointer;
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 24px;
+            font-size: 20px;
+        }
+        
+        /* Responsive adjustments */
+        @media (max-width: 768px) {
+            .info-box {
+                padding: 15px 20px;
+                max-width: 90%;
+            }
+            .info-box h2 {
+                font-size: 18px;
+            }
+            .distance {
+                font-size: 18px;
+            }
+            .info-box p {
+                font-size: 12px;
+            }
         }
     </style>
 </head>
