--- a/index.html
+++ b/index.html
@@ -23,33 +23,37 @@
             width: 100%;
             height: 100%;
             overflow: hidden;
+            background: #2d3439;
         }
         .wrapper {
             width: 100%;
             height: 100%;
             display: flex;
             flex-direction: column;
+            background: #2d3439;
         }
         .map-container {
-            flex: 1;
+            flex: 0 0 70%;
             position: relative;
-            background: white;
-            padding: 10px;
         }
         #map { 
             position: absolute; 
-            top: 10px; 
-            left: 10px;
-            right: 10px;
-            bottom: 10px; 
-            width: calc(100% - 20px); 
-            height: calc(100% - 20px);
-            border-radius: 8px;
+            top: 0; 
+            left: 0;
+            right: 0;
+            bottom: 0; 
+            width: 100%; 
+            height: 100%;
+            border-radius: 30px;
         }
         .text-container {
+            flex: 0 0 30%;
             background: #2d3439;
-            padding: 40px 20px;
+            padding: 20px;
             text-align: center;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
         .text-container p {
             font-size: 1rem;
@@ -58,8 +62,9 @@
             margin: 0;
         }
         .distance {
-            color: #d4a574;
+            color: #9998CD;
             font-weight: 700;
+            font-style: italic;
         }
         .marker-olympia {
             width: 40px;
@@ -92,8 +97,12 @@
         }
         
         @media (max-width: 768px) {
+            .map-container {
+                flex: 0 0 60%;
+            }
             .text-container {
-                padding: 30px 15px;
+                flex: 0 0 40%;
+                padding: 15px;
             }
             .text-container p {
                 font-size: 0.9rem;
@@ -112,14 +121,12 @@
     </div>
 
     <script>
-        // REPLACE THIS WITH YOUR ACTUAL MAPBOX TOKEN!
         mapboxgl.accessToken = 'pk.eyJ1Ijoic2hyZXlhYmQiLCJhIjoiY21pejVidnVuMG10bDNrcHk1Z3k5aHRzcSJ9.qduOTQCG_kaOQWKYZgdGug';
 
-        const olympia = [-122.9007, 47.0379]; // Olympia, Washington
+        const olympia = [-122.9007, 47.0379];
 
-        // Calculate distance using Haversine formula
         function getDistance(coord1, coord2) {
-            const R = 3959; // Earth's radius in miles
+            const R = 3959;
             const lat1 = coord1[1] * Math.PI / 180;
             const lat2 = coord2[1] * Math.PI / 180;
             const dLat = (coord2[1] - coord1[1]) * Math.PI / 180;
@@ -133,7 +140,6 @@
             return Math.round(R * c);
         }
 
-        // Function to get user's location via IP geolocation
         async function getUserLocation() {
             try {
                 const response = await fetch('https://ipapi.co/json/');
@@ -141,11 +147,10 @@
                 return [data.longitude, data.latitude];
             } catch (error) {
                 console.error('Error getting location:', error);
-                return [-73.5673, 45.5017]; // Montreal as fallback
+                return [-73.5673, 45.5017];
             }
         }
 
-        // Initialize the map
         async function initMap() {
             const userLocation = await getUserLocation();
             
@@ -178,7 +183,7 @@
                         'line-cap': 'round'
                     },
                     'paint': {
-                        'line-color': '#ff0066',
+                        'line-color': '#9998CD',
                         'line-width': 3,
                         'line-dasharray': [0, 2, 1]
                     }
