--- a/index.html
+++ b/index.html
@@ -45,6 +45,31 @@
             width: 100%; 
             height: 100%;
         }
+        /* Hide Mapbox attribution */
+        .mapboxgl-ctrl-logo,
+        .mapboxgl-ctrl-attrib,
+        .mapboxgl-ctrl-bottom-right,
+        .mapboxgl-ctrl-bottom-left {
+            display: none !important;
+        }
+        /* Custom attribution on hover */
+        .map-attribution {
+            position: absolute;
+            bottom: 10px;
+            right: 10px;
+            background: rgba(0, 0, 0, 0.7);
+            color: white;
+            padding: 5px 10px;
+            border-radius: 5px;
+            font-size: 11px;
+            opacity: 0;
+            transition: opacity 0.3s ease;
+            pointer-events: none;
+            z-index: 10;
+        }
+        .map-container:hover .map-attribution {
+            opacity: 1;
+        }
         .text-container {
             flex: 0 0 20%;
             background: #2d3439;
@@ -113,6 +138,7 @@
     <div class="wrapper">
         <div class="map-container">
             <div id='map'></div>
+            <div class="map-attribution">© Mapbox © OpenStreetMap</div>
         </div>
         <div class="text-container">
             <p>I live in Olympia Washington, roughly <span class="distance" id="distance">calculating...</span> away from your location, according to your IP address.</p>
@@ -160,7 +186,8 @@
                 container: 'map',
                 style: 'mapbox://styles/mapbox/dark-v11',
                 center: [-98, 42],
-                zoom: 3
+                zoom: 3,
+                attributionControl: false
             });
 
             map.on('load', () => {
