--- a/index.html
+++ b/index.html
@@ -169,10 +169,17 @@
             try {
                 const response = await fetch('https://ipapi.co/json/');
                 const data = await response.json();
-                return [data.longitude, data.latitude];
+                console.log('User location data:', data);
+                
+                if (data.latitude && data.longitude) {
+                    return [data.longitude, data.latitude];
+                } else {
+                    console.error('No coordinates in response');
+                    return [-73.5673, 45.5017]; // Fallback
+                }
             } catch (error) {
                 console.error('Error getting location:', error);
-                return [-73.5673, 45.5017];
+                return [-73.5673, 45.5017]; // Fallback to Montreal
             }
         }
 
