--- a/index.html
+++ b/index.html
@@ -91,23 +91,24 @@
             font-style: italic;
         }
         .marker-olympia {
-            width: 40px;
+            width: 30px;
             height: 40px;
-            border-radius: 50% 50% 50% 0;
             background: white;
-            border: 4px solid #334;
+            border: 3px solid #334;
             cursor: pointer;
+            position: relative;
+            border-radius: 50% 50% 50% 0;
             transform: rotate(-45deg);
-            box-shadow: 0 3px 10px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 3px 10px rgba(0, 0, 0, 0.4);
         }
-        .marker-olympia::before {
+        .marker-olympia::after {
             content: '';
             position: absolute;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%) rotate(45deg);
-            width: 12px;
-            height: 12px;
+            width: 10px;
+            height: 10px;
             border-radius: 50%;
             background: #334;
         }
