--- a/index.html
+++ b/index.html
@@ -91,26 +91,15 @@
             font-style: italic;
         }
         .marker-olympia {
-            width: 30px;
+            width: 40px;
             height: 40px;
-            background: white;
-            border: 3px solid #334;
             cursor: pointer;
-            position: relative;
-            border-radius: 50% 50% 50% 0;
-            transform: rotate(-45deg);
-            box-shadow: 0 3px 10px rgba(0, 0, 0, 0.4);
+            filter: drop-shadow(0 3px 10px rgba(0, 0, 0, 0.4));
         }
-        .marker-olympia::after {
-            content: '';
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%) rotate(45deg);
-            width: 10px;
-            height: 10px;
-            border-radius: 50%;
-            background: #334;
+        .marker-olympia svg {
+            width: 100%;
+            height: 100%;
+            fill: #4E988E;
         }
         .marker-user {
             width: 60px;
