--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         .map-container {
             flex: 0 0 80%;
             position: relative;
+            border: 2px solid rgba(255, 255, 255, 0.1);
         }
         #map { 
             position: absolute; 
@@ -78,6 +79,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            box-shadow: 0 -4px 20px rgba(0, 0, 0, 0.3);
         }
         .text-container p {
             font-size: 1rem;
